# RAG-Powered-Web-Scraping-and-Content-Analysis-Platform

./: .dockerignore  .env.docker  .env.example  .gitignore  CHROMADB_MIGRATION_COMPLETE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.new  PROJECT_COMPLETION_SUMMARY.md  README.md  README_ARCHITECTURE.md  TEST_SUMMARY_REPORT.md  WBS_Knowledge_Repository.csv  WBS_Knowledge_Repository_Gantt.md  comprehensive_migration.py  comprehensive_test_report.html  debug_chromadb.py  debug_llm_service.py  demo_rag_system.py  dev-mode.bat  dev-mode.sh  dev-watch.ps1  docker-compose.chromadb.yml  docker-compose.dev.yml  docker-compose.yml  docker-setup.bat  docker-setup.sh  entrypoint-with-chromadb.sh  launch_api.py  migrate_chromadb.py  optimize_performance.py  performance_dashboard.html  pyproject.toml  pyrightconfig.json  pytest.ini  quick-restart.bat  rag_performance_enhancements.py  rebuild-backend.sh  requirements-minimal.txt  requirements.txt  (+10 more)
Assets/: Project 2_ Web Content Analyzer.md  WBS_Knowledge_Repository.xlsx  WBS_Web_Content_Analyzer.csv
backend/: launch_backend.py
backend/api/: images.py  main.py
backend/api/knowledge_repository/: __init__.py  routes.py  simple_routes.py
backend/src/: __init__.py
backend/src/domain/: __init__.py  models.py
backend/src/infrastructure/: image_processor.py
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  QUICK_START.md  USER_GUIDE.md  WBS_2.1_COMPLETION_SUMMARY.md  WBS_2.2_COMPLETION_SUMMARY.md  WBS_2.3_COMPLETION_SUMMARY.md
exports/: report.html
frontend/streamlit/: app.py  launch_frontend.py  streamlit_app.py
frontend/streamlit/components/: __init__.py  bulk_analyzer.py  bulk_analyzer_fixed.py  history_manager.py  image_gallery.py  knowledge_repository.py  (+3 more)
scripts/: demo_domain.py  demo_security.py  launch_app.py  launch_full_stack.py  run_tests.py  setup.py  test_content_analysis_pipeline.py  test_llm_service.py  validate_wbs_2_3.py
src/api/: __init__.py  main.py
src/application/: __init__.py
src/domain/: exceptions.py  models.py  report_models.py  services.py
src/infrastructure/: __init__.py
src/knowledge_repository/: __init__.py  models.py  services.py
src/presentation/: __init__.py
templates/: bulk_summary.html  comparative_analysis.html  executive_summary.html  individual_analysis.html  technical_report.html
tests/: README.md  __init__.py  conftest.py  test_bulk_analysis.py  test_llm_response.py  test_performance.py  test_security.py
tests/integration/: test_api_endpoints.py  test_llm_response.py  test_simple_integration.py
tests/performance/: test_performance_metrics.py  test_performance_metrics_fixed.py
tests/rag_integration/: test_bulk_rag_integration.py  test_rag_features.py  test_rag_integration.py  test_rag_llm.py
tests/security/: test_security_validation.py
tests/ui/: test_trash_icon_ui.py  test_website_deletion.py
tests/unit/: __init__.py  test_content_analysis.py  test_content_analysis_fix.py  test_llm_providers.py  test_standalone_functionality.py  test_web_scraper.py
(+67 files in other folders)
